[inline-block][vertical-lr] update width calculation of inline-block with vertical-lr element. https://bugs.webkit.org/show_bug.cgi?id=187454 <rdar://41980917>

Reviewed by NOBODY (OOPS!).

This PR addresses an issue where the preferred logical width of parents of orthogonal flow
children may be incorrectly calculated. This is acomplished by calling layout() on orthogonal
flow children that need layout.

The previous implementation essentially estimated the height to be borderAndPaddingLogicalHeight()
and avoided a layout() call.

auto extent = box->computeLogicalHeight(box->borderAndPaddingLogicalHeight(), 0).m_extent;

was functionally identical to:

RenderBox::computeLogicalHeightWithoutLayout()

As the height of orthogonal flow children is not available until layout.

Combined changes:
* LayoutTests/fast/inline-block/inline-block-width-vertical-lr-expected.txt: Added.
* LayoutTests/fast/inline-block/inline-block-width-vertical-lr.html: Added.
* Source/WebCore/rendering/RenderBlockFlow.cpp:
(WebCore::RenderBlockFlow::computeInlinePreferredLogicalWidths const):
* Source/WebCore/rendering/RenderBox.cpp:
(WebCore::hasEquivalentGridPositioningStyle):
(WebCore::RenderBox::updateGridPositionAfterStyleChange):